// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 fgmzMj"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    />
  </div>
</div>
`;

exports[`FormField w/ any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB className"
  id="alarm"
  title="title"
>
  <label
    class="Labelstyles__Box-gottoi-0 fgmzMj"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    />
  </div>
</div>
`;

exports[`FormField w/ inline 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 gIfyHx"
>
  <label
    class="Labelstyles__Box-gottoi-0 fgmzMj"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ label any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 fgmzMj className"
    id="alarm"
    title="title"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    />
  </div>
</div>
`;

exports[`FormField w/ label required 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 fgmzMj"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: center 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 eEFRxM"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: left 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 fJQMWZ"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: right 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 gLWqAu"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 fgmzMj"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc className"
      id="alarm"
      title="title"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message coloring: critical 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 gtrxAu"
      color="critical"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message coloring: warning 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 ciSlzR"
      color="warning"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ messages 1`] = `
<div
  class="FormFieldstyles__Box-sc-2u45vx-0 eQlCB"
>
  <label
    class="Labelstyles__Box-gottoi-0 hCpbFY"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-1ds2jb5-0 emdrOR"
  >
    Input
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    >
      Message
    </div>
    <div
      class="Messagestyles__Box-sc-2hwjqm-0 BFhKc"
    >
      Message #2
    </div>
  </div>
</div>
`;
